--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "firebase": "^9.6.7",
     "nodemon": "^2.0.15"
   },
@@ -26,5 +27,4 @@
     "url": "https://github.com/Ecantero/Project-in-Existing-Code/issues"
   },
   "homepage": "https://github.com/Ecantero/Project-in-Existing-Code#readme"
-
 }
